# HW_Chapter-6_Database

Lesson 6.1_Introduction to databases/: Справка по PostgreSQL.txt
Lesson 6.2_SQL. Create DB/Task 1/: homework_6.2_1 - script.sql
Lesson 6.2_SQL. Create DB/Task 2/: homework_6.2_2 - script.sql
Lesson 6.4_Advanced data sampling/Task_1-4/: homework 6.2_1 - CREATE.sql  homework 6.4_1 - INSERT.sql  homework 6.4_2-4 - SELECT.sql
Lesson 6.5_PostgreSQL in C++/HW/ClientsDB/: CMakeLists.txt  main.cpp
Lesson 6.5_PostgreSQL in C++/Lesson/PqxxProject/: CMakeLists.txt  main.cpp
